# ssh-starter

./: .gitignore  LICENSE  README.md  config.toml  install.sh  pyproject.toml  run-app.bat  run-app.sh  setup.bat  setup.sh
.github/workflows/: publish.yml
app/: __init__.py  config.py  history.py  main.py  models.py  routing.py  ssh_config.py  ui.py
docs/demo/: ssh_config
scripts/: release.py  render_main_window_mock.py
